--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,5 +5,7 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.App_design" parent="Base.Theme.App_design" />
+    <style name="Theme.App_design" parent="Base.Theme.App_design" >
+        <item name="colorPrimary">@color/yellow</item>
+    </style>
 </resources>
