--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,6 +6,6 @@
     </style>
 
     <style name="Theme.App_design" parent="Base.Theme.App_design" >
-        <item name="colorPrimary">@color/yellow</item>
+        <item name="colorPrimary">@color/colorperfilazul</item>
     </style>
 </resources>
