--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/back_app"
     android:gravity="center"
     tools:context=".SplashActivity">
 
@@ -12,5 +13,13 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:src="@drawable/app_logo"/>
+
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_marginTop="300dp"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
