--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="celestial">#22C6A8</color>
     <color name="yellow">#CDBB10</color>
     <color name="blue">#0B469E</color>
-    <color name="blueTravel">#FE</color>
+    <color name="blueTravel">#3AA3A5</color>
     <color name="red">#A61010</color>
     <color name="green">#29BA0F</color>
     <color name="naranja">#CA8116</color>
