--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -77,7 +77,7 @@
                         android:layout_gravity="center"
                         android:src="@drawable/icon_restaurant"/>
                     <Button
-                        android:id="@+id/CrearPublicacionOpcion"
+                        android:id="@+id/btngastronomia"
                         android:text="@string/gastronomia"
                         android:textColor="@color/colorperfilblanco"
                         android:layout_marginStart="5dp"
@@ -111,7 +111,7 @@
                         android:layout_gravity="center"/>
 
                     <Button
-                        android:id="@+id/PublicacionesOpcion"
+                        android:id="@+id/btnturismo"
                         android:textColor="@color/colorperfilblanco"
                         android:text="@string/turismo"
                         android:layout_width="match_parent"
@@ -134,7 +134,7 @@
                         android:layout_gravity="center"/>
 
                     <Button
-                        android:id="@+id/UsuarioOpcion"
+                        android:id="@+id/btnmedicina"
                         android:text="@string/saludmedicina"
                         android:textColor="@color/colorperfilblanco"
                         android:layout_marginStart="5dp"
@@ -167,7 +167,7 @@
                         android:layout_gravity="center"/>
 
                     <Button
-                        android:id="@+id/ChatOpcion"
+                        android:id="@+id/btnfinanza"
                         android:text="@string/finanzas"
                         android:textColor="@color/colorperfilblanco"
                         android:layout_width="match_parent"
@@ -190,7 +190,7 @@
                         android:layout_gravity="center"/>
 
                     <Button
-                        android:id="@+id/CerrarSesion"
+                        android:id="@+id/btncomercio"
                         android:text="@string/comercio"
                         android:layout_marginStart="5dp"
                         android:textColor="@color/colorperfilblanco"
