--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -72,6 +72,7 @@
             >
 
             <EditText
+                android:id="@+id/txtemail"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:drawablePadding="16dp"
@@ -91,6 +92,7 @@
          >
 
             <EditText
+                android:id="@+id/txtpassword"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:drawablePadding="16dp"
